Revert "get rid of apache maven plugin for java 11"
This reverts commit 80d9f6686d46cba83a763f59a3d6ea0d6eca1352.